Fixed double border issue on the left of the first mode
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@336 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/GUI/Widgets/ModeSwitcher/Web/GUIModeSwitcher.css
+++ b/Systems/GUI/Widgets/ModeSwitcher/Web/GUIModeSwitcher.css
@@ -95,6 +95,7 @@
 
 .GUIContentSwitcher.GUIModeSwitcher li.positionFirst a {
     padding-left: 1.8em;
+    border: none;
 }
 
 .GUIModeSwitcher-overflow {
